chore: add Canvas[type]

--- a/packages/remax-cli/src/__tests__/integration/fixtures/turbo-pages-fragment-root/expected/pages/index.axml
+++ b/packages/remax-cli/src/__tests__/integration/fixtures/turbo-pages-fragment-root/expected/pages/index.axml
@@ -71,6 +71,7 @@
     onTouchMove="{{node.props['onTouchMove']}}" 
     onTouchStart="{{node.props['onTouchStart']}}" 
     style="{{node.props['style']}}" 
+    type="{{node.props['type']}}" 
     width="{{node.props['width']}}" 
   >
     <template is="TPL_TRAVERSAL" data="{{root: node}}" />
