--- a/packages/remax-cli/src/__tests__/integration/fixtures/turbo-pages-picker-view/expected/pages/index.axml
+++ b/packages/remax-cli/src/__tests__/integration/fixtures/turbo-pages-picker-view/expected/pages/index.axml
@@ -91,6 +91,7 @@
     onTouchMove="{{node.props['onTouchMove']}}" 
     onTouchStart="{{node.props['onTouchStart']}}" 
     style="{{node.props['style']}}" 
+    type="{{node.props['type']}}" 
     width="{{node.props['width']}}" 
   >
     <template is="TPL_TRAVERSAL" data="{{root: node}}" />
